tests/fixtures/valid/comments.wgsl
// Line comment at the start

/* Block comment
   spanning multiple lines */

fn main() {
    // Inline comment
    var x: f32 = 1.0; // End of line comment
    
    /* Another block comment */
    var y: f32 = 2.0;
}

// Comment at the end
