tests/fixtures/invalid/invalid-type.wgsl
// Invalid type name
fn test() {
    var x: InvalidType = 1.0;
}
